修正 CustomerController 查询指定ID记录不存在的处理